feat: se implementa gamificacion, task, se ajusta security

--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Restablecer Contraseña - Ideappsis</title>
+	<!-- Meta tags para el token CSRF -->
+	<meta name="_csrf" content="${_csrf.token}" />
+	<meta name="_csrf_header" content="${_csrf.headerName}" />
 	<!-- Font Awesome para Íconos -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<style>
@@ -141,7 +144,8 @@
 <body>
 	<div class="container">
 		<!-- Título de la Aplicación -->
-		<h1 class="app-title">Ideappsis</h1>
+		<h8 class="app-title">Ideappsis</h8>
+		<h1 class="app-title">Control Track</h1>
 		<p class="subtitle">Restablece tu contraseña de forma segura</p>
 
 		<!-- Formulario -->
@@ -196,9 +200,16 @@
 			const newPassword = document.getElementById("newPassword").value;
 			const confirmPassword = document.getElementById("confirmPassword").value;
 
-			console.log("Token:", token); // Depuración: Verifica el valor del token en la consola
-			console.log("New Password:", newPassword);
-			console.log("Confirm Password:", confirmPassword);
+			// Obtener el token CSRF
+			//const csrfToken = document.querySelector('meta[name="_csrf"]').getAttribute('content');
+			//const csrfHeader = document.querySelector('meta[name="_csrf_header"]').getAttribute('content');
+
+			// Validar contraseñas
+			if (newPassword !== confirmPassword) {
+				document.getElementById("errorMessage").textContent = "Las contraseñas no coinciden.";
+				document.getElementById("errorMessage").style.display = "block";
+				return;
+			}
 
 			// Limpiar mensajes anteriores
 			document.getElementById("successMessage").style.display = "none";
@@ -209,13 +220,14 @@
 				method: "POST",
 				headers: {
 					"Content-Type": "application/json",
+					//[csrfHeader]: csrfToken, // Incluye el token CSRF
 				},
 				body: JSON.stringify({
 					token: token,
 					newPassword: newPassword,
 					confirmPassword: confirmPassword,
-				}),
-				credentials: "include",// Incluir cookies en la solicitud
+				}).toString(),
+				credentials: "include", // Incluir cookies en la solicitud
 			})
 				.then((response) => response.json())
 				.then((data) => {
@@ -231,11 +243,11 @@
 				})
 				.catch((error) => {
 					console.error("Error:", error);
-					document.getElementById("errorMessage").textContent =
-						"Ocurrió un error inesperado. Por favor, intenta nuevamente.";
+					document.getElementById("errorMessage").textContent = "Error inesperado. Consulta la consola.";
 					document.getElementById("errorMessage").style.display = "block";
 				});
 		});
+
 	</script>
 </body>
 
